Add ability to whitelist armor or tools based on tag. Resolves #77